# pointcompute

./: CMakeLists.txt  build.sh  depth2pcd.sh
data/intrinsic/: point_2.yaml
src/: main.cpp
